--- a/frontend/navbar/nav.css
+++ b/frontend/navbar/nav.css
@@ -4,40 +4,102 @@ body {
     background: rgba(13, 0, 45, 0.815);
 }
 
-nav {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 980;
-    position: absolute;
-    width: 100vw;
+header {
     justify-content: center;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+}
+
+.nav-deactive {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 900;
+    background-color: black;
+    position: absolute;
+    left: -5px;
+    top: 40%;
+    width: 6rem;
+    justify-content: space-around;
+    text-align: center;
+    height: 6rem;
+    display: inline-flex;
+    overflow: hidden;
+    transition: 0.5s ease;
+    display: block;
+    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+}
+
+.nav-active {
+    position: relative;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 900;
+    background-color: #000;
+    width: 95vw;
+    justify-content: space-around;
     text-align: center;
     height: 100vh;
+    overflow: hidden;
+    transition: 0.5s ease;
     display: block;
-    background-color: aliceblue;
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
 }
 
-nav ul {
-    margin: 0;
-    background-color: black;
+.ul-deactive {
+    margin-top: 4vh;
+    height: inherit;
+    display: none;
+    justify-content: center;
+    padding: 0;
+}
+
+.ul-active {
+    margin-top: 6vh;
     height: inherit;
     display: grid;
     justify-content: center;
     padding: 0;
 }
 
-nav i .fa {
-    color: blanchedalmond;
-    position: absolute;
-    left: 0;
-}
-
 ul li {
-    margin-top: 2vh;
     list-style-type: none;
 }
 
 li a {
+    font-size: 1.5rem;
     text-decoration: none;
     color: beige;
+}
+
+nav .j {
+    top: 50%;
+    position: relative;
+    right: 0%;
+    font-weight: 900;
+    font-size: 3rem;
+    width: 2rem;
+    background-color: none;
+    color: antiquewhite;
+    transform: translate(-50%, -50%);
+}
+
+.fa-times {
+    position: relative;
+    top: 50%;
+    left: 96%;
+    transform: translate(-50%, -50%);
+    font-weight: 900;
+    font-size: 3rem;
+    width: 2rem;
+    background-color: none;
+    color: antiquewhite;
+    display: none;
+    color: red;
+}
+
+.times-deactive {
+    display: none;
+}
+
+.j-active {
+    display: none;
 }
