--- a/frontend/landing/lander.css
+++ b/frontend/landing/lander.css
@@ -3,3 +3,122 @@
     padding: 0;
     font-family: "Ubuntu";
 }
+
+
+/* section 1 */
+
+
+/*  */
+
+.sec1s {
+    background: url("./images/airoplane.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.sec1s svg {
+    position: absolute;
+    bottom: 0;
+}
+
+.box {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0, 0.6);
+    border-radius: 30px;
+    height: 30rem;
+    width: 60%;
+    text-align: center;
+    text-shadow: 80px #000;
+}
+
+.box h1 {
+    font-size: 3.5rem;
+    font-weight: 500;
+    margin: 6vh;
+    font-family: "Poppins";
+    text-transform: capitalize;
+    color: #fff;
+}
+
+.box h6 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-family: "Poppins";
+    margin: 1rem;
+    color: #ddd8b8;
+}
+
+.box span {
+    font-size: 3.5rem;
+    font-weight: 800;
+    font-family: "Ubuntu";
+    color: #542e71;
+}
+
+.box .btn {
+    padding: 8px;
+    font-size: 1.5rem;
+    background-color: #84a9ca;
+    margin-top: 1rem;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-weight: 900;
+}
+
+.box button:hover {
+    margin: 22px;
+    color: antiquewhite;
+}
+
+@media screen and (max-width: 900px) {
+    /* .box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: bisque;
+        height: 30rem;
+        text-align: center;
+    }
+    .box h1 {
+        font-size: 5rem;
+        font-weight: 900;
+        font-family: "Poppins";
+    }
+    .box h6 {
+        font-size: 1.5rem;
+        font-weight: 800;
+        font-family: "Poppins";
+        margin: 1rem;
+    }
+    .box span {
+        font-size: 5rem;
+        font-weight: 800;
+        font-family: "Ubuntu";
+        color: #542e71;
+    }
+    .box .btn {
+        padding: 8px;
+        font-size: 2rem;
+        background-color: #84a9ca;
+        margin-top: 1rem;
+        border: 1px solid white;
+        border-radius: 5px;
+    }
+    .btn:hover {
+        margin: 22px;
+        color: antiquewhite;
+    } */
+}
+
+
+/* ////////////////////////////////////// */
+
+
+/* ends */
